src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/UnloadableBundleClass6/InvalidUnloadableBundleClass6.php
<?php

namespace Invalid\UnloadableBundleClass6;

class InvalidUnloadableBundleClass6
{
    /**
     * Invalid because it cannot be instantiated
     */
    private function __construct()
    {
    }
}